# ppathlib

./: .env.template  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  UPSTREAM.md  pyproject.toml
.github/workflows/: publish.yml
docs/: 0.2.0-plan.md  0_PHILOSOPHY.md  1_STANDARD.md  2_DECISIONS.md  3_CURRENT.md  backends.md  configuration.md
ppath_tests/: conftest.py  test_ppath.py  test_ppath_live_r2.py
ppathlib/: __init__.py  client.py  cloudpath.py  enums.py  exceptions.py  patches.py  ppath.py  remote_path.py
ppathlib/azure/: azblobclient.py  azblobpath.py
ppathlib/gs/: gsclient.py
ppathlib/http/: httpclient.py
ppathlib/local/: __init__.py
ppathlib/local/implementations/: azure.py  gs.py  s3.py
ppathlib/s3/: s3client.py
tests/: conftest.py  support.py  test_01_local_mode.py  test_02_remote_mode_entry.py  test_03_remote_lexical_behavior.py  test_04_placeholder_remote_behavior.py  test_05_configuration_discovery.py  test_06_environment_variable_boundary.py  test_07_pathlib_style_workflows.py  test_08_live_r2_workflow.py  test_anypath.py  test_azure_specific.py  test_caching.py  test_client.py  test_cloudpath_file_io.py  test_cloudpath_instantiation.py  test_cloudpath_internal.py  test_cloudpath_manipulation.py  test_cloudpath_serialize.py  test_cloudpath_upload_copy.py  test_gs_specific.py  test_integrations.py  test_local.py  test_patching.py  test_s3_specific.py
tests/performance/: cli.py  runner.py
