[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ppathlib"
version = "0.1.0"
description = "Pathlib-style classes for local files and named remote storage."
readme = "README.md"
authors = [{ name = "hus" }]
license = { file = "LICENSE" }
keywords = [
  "pathlib",
  "remote storage",
  "object storage",
  "obstore",
  "profiles",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
  "typing-extensions>4 ; python_version < '3.11'",
]

[project.optional-dependencies]
obstore = ["obstore>=0.9.2"]

[dependency-groups]
dev = [
  "black>=24.1.0",
  "build",
  "mypy",
  "obstore>=0.9.2",
  "pytest",
  "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 99
target-version = ["py310", "py311", "py312", "py313"]
include = "\\.pyi?$|\\.ipynb$"
extend-exclude = """
/(
    \\.git
  | \\.venv
  | \\.ipynb_checkpoints
)/
"""

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["ppath_tests"]
