[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ppathlib"
version = "0.1.0"
description = "Pathlib-style classes for local files and named remote storage."
readme = "README.md"
authors = [{ name = "hus" }]
license = { file = "LICENSE" }
keywords = [
  "pathlib",
  "remote storage",
  "object storage",
  "obstore",
  "profiles",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "obstore>=0.9.2",
  "tomli",
]

[dependency-groups]
dev = [
  "build",
  "pandas",
  "pytest",
  "ruff",
  "ty",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
markers = [
  "live_remote: exercises a live remote storage workflow with project configuration",
]
