[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ppathlib"
dynamic = ["version"]
description = "Pathlib-style classes for local files and named remote storage."
readme = "README.md"
authors = [{ name = "hus" }]
license = { file = "LICENSE" }
keywords = [
  "pathlib",
  "remote storage",
  "object storage",
  "obstore",
  "profiles",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = ["obstore>=0.9.2"]

[dependency-groups]
dev = [
  "build",
  "pandas",
  "pytest",
  "ruff",
  "ty",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501", "C901"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
markers = [
  "live_remote: exercises a live remote storage workflow with project configuration",
]

[tool.setuptools]
packages = ["ppathlib"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
